# spin-to-win-SOLANA

./: README.md  algo.cpp  remind.txt
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/component/: Dashboard.tsx
contract/: Anchor.toml  doc.txt
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: lib.rs  probability.rs
contract/tests/: company_pool.test.ts
server/: .env  server.js
